# retro-brick-game-raylib

./: .gitignore  CMakeLists.txt  README.md  build.gradle.kts  gradle.properties  main.cpp  settings.gradle.kts
.github/: dependabot.yml
.github/workflows/: build.yml
assets/bricks/: backgrounds.xcf  brick.xcf  sprite.xcf
libs/raylib/cmake/: LibraryConfigurations.cmake
libs/raylib/src/: core.c
src/: GameView.cpp  GameView.h  main.cpp  shell.html
src/bricks/: Background.cpp  Background.h  BackgroundBrick.cpp  BackgroundBrick.h  BackgroundRaw.cpp  BackgroundRaw.h  Brick.cpp  Brick.h  Bullet.cpp  Bullet.h  Enemy.cpp  Enemy.h  EnemyBrick.cpp  EnemyBrick.h  Player.cpp  Player.h  PlayerBrick.cpp  PlayerBrick.h  RawBrick.cpp  RawBrick.h  SingleBrick.cpp  SingleBrick.h  SpriteBrick.cpp  SpriteBrick.h  TextureBrick.cpp  TextureBrick.h
src/main/: AndroidManifest.xml
src/main/res/values/: strings.xml
src/raylib/: Vector2.cpp  Vector2.h
src/sidebar/: GameOver.cpp  GameOver.h  Level.cpp  Level.h  Score.cpp  Score.h
xlaunch/: README.md
